tests/ui/proc-macro/match-expander.stderr
error[E0308]: mismatched types
  --> $DIR/match-expander.rs:9:5
   |
LL |     match_expander::matcher!();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `S`, found `bool`
   |
   = note: this error originates in the macro `match_expander::matcher` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
